# homage-cv-app

./: .gitignore  build-all-cv.py
Core/Android/: Core.mk  CoreUtil.mk  Util1.mk  build.bat
Core/ImageLib/: CMakeLists.txt  Image.mk  Image.plg  Image.vcp  Image.vcxproj  Image.vcxproj.filters
Core/Util/: Box2Dump.c  CMakeLists.txt  Util.mk  Util.vcxproj  Util.vcxproj.filters
Edge/Android/: Edge.mk
Edge/EdgeLib/: EdgeLib.mk
Edge/PlnLib/: CMakeLists.txt  PlnLib.mk  PlnLib.vcxproj  PlnLib.vcxproj.filters
Homage/Android/: Homage.mk  MattingApp_key.jks  vVideoEncodderI.java
Homage/HomageLib/: Homage.cpp  Homage.h  ReadMe.txt
Homage/HrRendererLib/: CMakeLists.txt  HomageRenderer.cpp  HomageRenderer.h  HrRendererLib.mk  HrRendererLib.vcxproj  HrRendererLib.vcxproj.filters
Homage/HrRendererLib/HrEffect/: HrEffectAlignment.cpp  HrEffectAlignment.h  HrEffectAlpha.cpp  HrEffectAlpha.h  HrEffectCartoon.cpp  HrEffectCartoon.h  HrEffectGray.cpp  HrEffectGray.h  HrEffectI.cpp  HrEffectI.h  HrEffectMask.cpp  HrEffectMask.h  HrEffectMaskGif.cpp  HrEffectMaskGif.h  HrEffectMaskWithSource.cpp  HrEffectMaskWithSource.h  HrEffectPose.cpp  HrEffectPose.h  HrEffectSepia.cpp  HrEffectSepia.h
Homage/HrRendererLib/HrEffect/HrEffectMorphing/: HrEffectMorphing.cpp  HrEffectMorphing.h  MorphingPlnMap.cpp  MorphingPlnMap.h
Homage/HrRendererLib/HrOutput/: HrOutputGif.cpp  HrOutputGif.h  HrOutputGreenWin.cpp  HrOutputGreenWin.h  HrOutputI.cpp  HrOutputI.h  HrOutputJava.cpp  HrOutputJava.h  HrOutputPng.cpp  HrOutputPng.h
Homage/HrRendererLib/HrRendererLib.xcodeproj/: project.pbxproj
Homage/HrRendererLib/HrRendererLib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Homage/HrRendererLib/HrSource/: HrSourceGif.cpp  HrSourceGif.h  HrSourceGreenWin.cpp  HrSourceGreenWin.h  HrSourceI.cpp  HrSourceI.h  HrSourceJava.cpp  HrSourceJava.h  HrSourceLive.h  HrSourcePng.cpp  HrSourcePng.h  HrSourcePngWin.cpp  HrSourcePngWin.h
Homage/MattingLib/: MattingLib.mk  MattingLib.vcxproj  MattingLib.vcxproj.filters  ReadMe.txt
HomageCV.xcworkspace/: contents.xcworkspacedata
Image/Png/: Png.sln  make.bat
Tracking/Android/: PlnTracker.mk  Tracking.mk  TrackingPln.mk
Tracking/PlnTracker/: PlnTracker.mk  (+5 more)
(+1285 files in other folders)
